[project]
name = 'attach_screenshot'
readme = 'README.md'
license = 'MIT'
requires-python = '>=3.11'
version = 'v0.0.1'
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ['ruff', 'faterunner']

[project.scripts]
attach_screenshot = 'attach_screenshot:cli'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.faterunner.targets]
check = ['ruff check .', 'ruff format --check .']
format = ['ruff check --fix .', 'ruff format .']
init = { commands = ["""
  if command -v uv &> /dev/null; then
    uv venv;
    uv sync --extra dev;
  else
    python3 -m venv .venv;
    ./.venv/bin/pip3 install '.[dev]';
  fi
"""], options = { shell = true } }

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
